@@ -10,6 +10,7 @@
 	  (DMI type 4).
 	* dmidecode.c: Decode the MIDR register on ARM processors
 	  (DMI type 4).
+	* dmidecode.c: Add support for large cache sizes (DMI type 7).
 
 2017-04-11  Jean Delvare  <jdelvare@suse.de>
 
